updating front and back end

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,13 @@
-<div class="email">
-    <form id="form" method="POST" action="/shortener">
-      <label for="url">Enter URL to shorten</label><br>
-      <input type="text" id="url" name="url" multiple>
-    </form>
+<div class="long_url">
+  <form id="form" method="POST" action="/shortener">
+    <label for="url">Enter LURL to shorten</label><br>
+    <input type="text" id="url" name="url" multiple>
+  </form>
+</div>
+
+<div class="short_url">
+  <form id="form" method="POST" action="/redirect">
+    <label for="url2">Enter SURL for redirection</label><br>
+    <input type="text" id="url2" name="url2" multiple>
+  </form>
 </div>
